# rag-knowledge-base

./: .dockerignore  .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  README.md  TROUBLESHOOT.md  UPGRADE.md  UPGRADE_PREMIUM.md  docker-compose.yml  requirements-dev.txt  requirements.txt  run.py
app/: __init__.py  main.py
app/agents/: __init__.py  workflow.py
app/api/: __init__.py  server.py
app/core/: __init__.py  config.py  loader.py  monitoring.py  rag_engine.py  splitter.py  vectorstore.py
app/core/prompts/: agent_prompts.py  rag_prompts.py
app/interview/: __init__.py  api.py  question_bank.py
app/ui/: __init__.py  gradio_app.py  interview_ui.py
data/: test_rag.md  test_rag.txt
data/interview/: questions.json  sessions.json
desktop/: build_tauri.bat  index.html  package.json  vite.config.ts
desktop/src/: App.vue
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src-tauri/src/commands/: mod.rs
desktop/src-tauri/src/models/: mod.rs
desktop/src-tauri/src/rag/: database.rs  mod.rs
desktop/src/layouts/: MainLayout.vue
desktop/src/router/: index.ts
desktop/src/styles/: main.scss
desktop/src/views/: ChatView.vue  DocumentsView.vue  InterviewView.vue  SettingsView.vue
docs/: DESKTOP_APP.md
tests/: test_api.py  test_benchmark.py  test_core.py  test_gradio.py  test_integration.py  test_interview.py  test_memory_agent.py  test_prompts.py  test_vectorstore.py  test_workflow.py
